<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/bgBtnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_top_left"
            android:backgroundTint="@color/colorAccent0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/bgBtnEdit"
            app:layout_constraintEnd_toEndOf="@+id/bgBtnEdit"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="@+id/bgBtnEdit"
            app:layout_constraintTop_toTopOf="@+id/bgBtnEdit"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/edit_password"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/bgBtnEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bgBtnEdit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/old_password"
            app:boxStrokeColor="@color/box_input_text_color"
            app:hintTextColor="@color/box_input_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/new_password"
            app:boxStrokeColor="@color/box_input_text_color"
            app:hintTextColor="@color/box_input_text_color"
            app:layout_constraintEnd_toEndOf="@+id/oldPasswordInputLayout"
            app:layout_constraintStart_toStartOf="@+id/oldPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/oldPasswordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword2InputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password"
            app:boxStrokeColor="@color/box_input_text_color"
            app:hintTextColor="@color/box_input_text_color"
            app:layout_constraintEnd_toEndOf="@+id/newPasswordInputLayout"
            app:layout_constraintStart_toStartOf="@+id/newPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtConfPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnEditPasswrod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/ic_done"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/newPassword2InputLayout"
            app:layout_constraintStart_toStartOf="@+id/newPassword2InputLayout"
            app:layout_constraintTop_toBottomOf="@+id/newPassword2InputLayout"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>